<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_preference">About</string>
    <string name="about_version">Version</string>
    <string name="accept_self_signed_certificates">Accept self-signed certificates</string>
    <string name="access_from_network">Access from network</string>
    <string name="access_from_pc">Access from PC</string>
    <string name="accessibility_pager">Page %1$d of %2$d</string>
    <string name="action_open_download_folder">Open the downloads folder</string>
    <string name="action_see_photos_today">See the Photos</string>
    <string name="active">Active</string>
    <string name="activity_resolver_use_always">Always</string>
    <string name="activity_resolver_use_once">Just once</string>
    <string name="ad_mark">Ad</string>
    <string name="ad_mark_desktop">"Ad : "</string>
    <string name="add_symbol">+</string>
    <string name="ads_settings">Advertising</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="analysis_file">%d file</string>
    <string name="analysis_files">%d files</string>
    <string name="analysis_folder">%d folder</string>
    <string name="analysis_folders">%d folders</string>
    <string name="analyze">Analyze</string>
    <string name="android10_open_tree_button">Allow access to \"%1$s\"</string>
    <string name="android11_open_tree_button">Use this folder</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_caches">Cache files</string>
    <string name="app_caches_desc">Cache files are temporary files that are stored by the apps</string>
    <string name="app_name">File Manager +</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps_all">ALL</string>
    <string name="apps_downloaded">DOWNLOADED</string>
    <string name="archive_is_damaged">The archive is either in unknown format or damaged</string>
    <string name="audio">Audio</string>
    <string name="audio_tracks">Audio tracks</string>
    <string name="automatic">Automatic</string>
    <string name="back_again_to_exit">Press back button again to exit</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="blocked_ip_error_message">You are attempting to log in to Box from a location that has not been approved by your admin. Please talk to your admin to resolve this issue.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="boxsdk_Authenticating">Authenticating</string>
    <string name="boxsdk_Authentication_fail">Authentication Failed</string>
    <string name="boxsdk_Authentication_fail_forbidden">Contact your administrator to authorize this device.</string>
    <string name="boxsdk_Authentication_fail_url_mismatch">The redirect url is not valid</string>
    <string name="boxsdk_Go_back">Go back</string>
    <string name="boxsdk_Please_wait">Please wait…</string>
    <string name="boxsdk_Security_Warning">Security Warning</string>
    <string name="boxsdk_Select_an_account_to_use">Select an account to use</string>
    <string name="boxsdk_There_are_problems_with_the_security_certificate_for_this_site">There are problems with the security certificate for this site.</string>
    <string name="boxsdk_Use_a_different_account">Use a different account</string>
    <string name="boxsdk_alert_dialog_cancel">Cancel</string>
    <string name="boxsdk_alert_dialog_ok">Submit</string>
    <string name="boxsdk_alert_dialog_password">Password</string>
    <string name="boxsdk_alert_dialog_text_entry">This website or application is requesting authentication.</string>
    <string name="boxsdk_alert_dialog_username">Username</string>
    <string name="boxsdk_box_app_signature">308201fd30820166a00302010202044c8a3289300d06092a864886f70d01010505003043310b3009060355040613024341310b3009060355040813024f6e310f300d060355040713064f747461776131163014060355040a130d426974686561647320496e632e301e170d3130303931303133323834315a170d3335303930343133323834315a3043310b3009060355040613024341310b3009060355040813024f6e310f300d060355040713064f747461776131163014060355040a130d426974686561647320496e632e30819f300d06092a864886f70d010101050003818d0030818902818100926a2f83b01d88c31614e8b398b40606aa098949d97922332cee24e7362b77bc8dfd3b3556f0f787042cf1d17ff5fb0dd8672d5d2bfc903a2b1ef330d7323a00b8b6187e000a0d1a34fe0e6dcfdd1bbd021718a5fed5249348f24626b7b2c5d35d70b8c6a1436be8006c8843bcf1b5dea829c9d48aa77d06ebc0eeac294388b70203010001300d06092a864886f70d0101050500038181009170b46b82a7e5529d7e8c9ce45d1ad6ba539a0808c278923e5d8740686f1069f744d2bf18ce239f1f082a3c3c810947c42f972464f1cc9c4e5f39b7eee4282d6a617d4cea94677154d5f58629dcad04fae7540936838d466cd0c08831dba6b4989459a460cccc741f5fe2affffb42ef47943cc2fa7017fecfbf3dfd6cfb07d0</string>
    <string name="boxsdk_button_ok">OK</string>
    <string name="boxsdk_button_okay">OKAY</string>
    <string name="boxsdk_bytes">%4.0f B</string>
    <string name="boxsdk_common_name">common name:</string>
    <string name="boxsdk_details">Details</string>
    <string name="boxsdk_error_fatal_refresh">You have been logged out.</string>
    <string name="boxsdk_error_network_connection">Unable to detect a network connection</string>
    <string name="boxsdk_error_terms_of_service">Your administrator has changed your TOS. You must login, and accept the TOS to continue.</string>
    <string name="boxsdk_expires_on">expires on:</string>
    <string name="boxsdk_file">file</string>
    <string name="boxsdk_folder">folder</string>
    <string name="boxsdk_gigabytes">%4.1f GB</string>
    <string name="boxsdk_issued_by">issued by:</string>
    <string name="boxsdk_issued_on">issued on:</string>
    <string name="boxsdk_issued_to">issued to:</string>
    <string name="boxsdk_kilobytes">%4.1f KB</string>
    <string name="boxsdk_megabytes">%4.1f MB</string>
    <string name="boxsdk_no_offline_access">No offline access</string>
    <string name="boxsdk_no_offline_access_detail">"We couldn't detect a network connection."</string>
    <string name="boxsdk_no_offline_access_todo">To log in, connect to a WiFi or mobile data network.</string>
    <string name="boxsdk_org_name">organization name:</string>
    <string name="boxsdk_org_unit">organization unit:</string>
    <string name="boxsdk_ssl_error_details">View details</string>
    <string name="close_button_text">Close</string>
    <string name="debug">DEBUG</string>
    <string name="dev_settings_navigation_default">1</string>
    <string name="dialog_button_apply_to_all_folders">Apply to all folders</string>
    <string name="dialog_entry_category">Select a category</string>
    <string name="dialog_entry_category_archive">Archive</string>
    <string name="dialog_entry_category_document">Document</string>
    <string name="dialog_entry_category_image">Image</string>
    <string name="dialog_entry_category_music">Music</string>
    <string name="dialog_entry_category_none">All</string>
    <string name="dialog_entry_category_video">Video</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="label_all_subfolders">All subfolders</string>
    <string name="menu_add_bookmark">Add Bookmark</string>
    <string name="menu_add_to_home_screen">Add to Home screen</string>
    <string name="menu_collapse">Collapse</string>
    <string name="menu_compress">Compress</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_expand">Expand</string>
    <string name="menu_extract">Extract</string>
    <string name="menu_extract_all">Extract All</string>
    <string name="menu_hide">Hide</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_new">New</string>
    <string name="menu_new_file">File</string>
    <string name="menu_new_folder">Folder</string>
    <string name="menu_open_as">Open as</string>
    <string name="menu_open_parent">Open location</string>
    <string name="menu_open_with">Open with</string>
    <string name="menu_properties">Properties</string>
    <string name="menu_quick_share">Quick Share</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_rotate">Rotate</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_unlock">Unlock</string>
    <string name="menu_view_settings">View</string>
    <string name="navigation_type">Navigation Type</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="permit_usage_access">Permit usage access</string>
    <string name="playback_speed">Playback speed</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="recycle_bin_confirmation">Show recycle confirmation</string>
    <string name="recycle_bin_settings">Recycle Bin Settings</string>
    <string name="ringtone_menu_short">Use as ringtone</string>
    <string name="screen_best_fit">Best fit</string>
    <string name="set_as">Set as</string>
    <string name="setting_usage_and_diagnostics">Usage &amp; diagnostics</string>
    <string name="settings_etc">Others</string>
    <string name="settings_hidden">Show hidden files</string>
    <string name="settings_hide_unhide">Hide/Unhide</string>
    <string name="settings_sort">Sort</string>
    <string name="settings_sortby">Sort By</string>
    <string name="settings_thumbnails">Show thumbnails</string>
    <string name="settings_view">View</string>
    <string name="show_advanced_menus">Show advanced menus</string>
    <string name="shuffle_title">Shuffle mode</string>
    <string name="subtitles">Subtitles</string>
    <string name="use_recycle_bin">Use Recycle bin by default</string>
    <string name="user_debug_mode">Debug mode</string>
</resources>