<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_ab_share" android:id="@id/menu_share" android:title="@string/menu_share" />
    <item android:icon="@drawable/ic_ab_quick_share" android:id="@id/menu_quick_share" android:title="@string/menu_quick_share" />
    <item android:id="@id/menu_ringtone" android:visible="false" android:title="@string/ringtone_menu_short" />
    <item android:icon="@drawable/ic_ab_bookmark" android:id="@id/menu_bookmark" android:title="@string/menu_add_bookmark" />
    <item android:icon="@drawable/ic_ab_add_to_homescreen" android:id="@id/menu_shortcut" android:visible="false" android:title="@string/menu_add_to_home_screen" />
    <item android:icon="@drawable/ic_ab_archive" android:id="@id/menu_compress" android:title="@string/menu_compress" />
    <item android:icon="@drawable/ic_ab_hide" android:id="@id/menu_hide_unhide" android:visible="false" android:title="@string/menu_hide" />
    <item android:icon="@drawable/ic_ab_unarchive" android:id="@id/menu_extract" android:visible="false" android:title="@string/menu_extract" />
    <item android:icon="@drawable/ic_ab_open_in_new" android:id="@id/menu_open_with" android:visible="false" android:title="@string/menu_open_with" />
    <item android:icon="@drawable/ic_ab_open_as" android:id="@id/menu_open_as" android:visible="false" android:title="@string/menu_open_as" />
    <item android:icon="@drawable/ic_ab_open_parent" android:id="@id/menu_open_parent" android:visible="false" android:title="@string/menu_open_parent" />
    <item android:icon="@drawable/ic_ab_info" android:id="@id/menu_properties" android:title="@string/menu_properties" />
    <item android:icon="@drawable/ic_ab_settings" android:id="@id/menu_selection_settings" android:title="@string/menu_settings" />
</menu>
