<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/recycle_bin_settings" android:key="settings_recycle_bin" app:iconSpaceReserved="false">
        <CheckBoxPreference android:title="@string/use_recycle_bin" android:key="use_recycle_bin" android:defaultValue="true" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/recycle_bin_confirmation" android:key="recycle_bin_confirmation_2" android:dependency="use_recycle_bin" android:defaultValue="true" app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/show_advanced_menus" android:key="show_advacned_menus" app:iconSpaceReserved="false">
        <CheckBoxPreference android:title="@string/menu_add_bookmark" android:key="show_add_to_favorite" android:defaultValue="true" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/menu_add_to_home_screen" android:key="show_add_to_home_screen" android:defaultValue="@bool/default_show_add_to_home_screen" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/settings_hide_unhide" android:key="show_hide_unhide" android:defaultValue="false" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/menu_open_as" android:key="show_open_as" android:defaultValue="false" app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
