<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/background_light" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/select_category" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dp" android:text="@string/dialog_entry_category" />
    <RadioGroup android:orientation="vertical" android:id="@id/category_group" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton android:id="@id/category_none" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/dialog_entry_category_none" />
        <RadioButton android:id="@id/category_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_entry_category_image" />
        <RadioButton android:id="@id/category_video" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_entry_category_video" />
        <RadioButton android:id="@id/category_music" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_entry_category_music" />
        <RadioButton android:id="@id/category_document" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_entry_category_document" />
        <RadioButton android:id="@id/category_archive" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_entry_category_archive" />
    </RadioGroup>
</LinearLayout>
