<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@id/group_non_search">
        <item android:icon="@drawable/ic_ab_add" android:id="@id/menu_new" android:orderInCategory="100" android:title="@string/menu_new" app:showAsAction="never">
            <menu>
                <item android:icon="@drawable/ic_ab_file" android:id="@id/menu_new_file" android:orderInCategory="10" android:title="@string/menu_new_file" />
                <item android:icon="@drawable/ic_ab_folder" android:id="@id/menu_new_folder" android:orderInCategory="20" android:title="@string/menu_new_folder" />
            </menu>
        </item>
        <item android:icon="@drawable/ic_ab_unarchive" android:id="@id/menu_extract_all" android:orderInCategory="100" android:title="@string/menu_extract_all" app:showAsAction="ifRoom" />
        <item android:icon="@drawable/ic_ab_view_settings" android:id="@id/menu_view_settings" android:orderInCategory="150" android:title="@string/menu_view_settings" app:showAsAction="ifRoom" />
    </group>
</menu>
