<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layoutDirection="ltr"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/buttons_line" android:paddingBottom="4.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/custom_toggle_expand" android:background="@drawable/btn_circular" android:layout_width="48.0dp" android:layout_height="48.0dp" android:layout_marginRight="4.0dp" android:scaleType="center" android:layout_alignParentRight="true" android:contentDescription="@string/menu_expand" app:srcCompat="@drawable/ic_expand_all" />
        <ImageView android:id="@id/custom_lock" android:background="@drawable/btn_circular" android:layout_width="48.0dp" android:layout_height="48.0dp" android:layout_marginRight="4.0dp" android:scaleType="center" android:layout_toLeftOf="@id/custom_toggle_expand" android:contentDescription="@string/menu_lock" app:srcCompat="@drawable/ic_lock" />
        <ImageButton android:id="@id/custom_subtitles" android:background="@drawable/btn_circular" android:visibility="gone" android:layout_width="48.0dp" android:layout_height="48.0dp" android:layout_marginRight="4.0dp" android:scaleType="center" android:layout_toLeftOf="@id/custom_lock" android:contentDescription="@string/subtitles" />
        <ImageButton android:id="@id/custom_audio_track" android:background="@drawable/btn_circular" android:visibility="gone" android:layout_width="48.0dp" android:layout_height="48.0dp" android:layout_marginRight="4.0dp" android:scaleType="center" android:layout_toLeftOf="@id/custom_subtitles" android:contentDescription="@string/exo_track_selection_title_audio" app:srcCompat="@drawable/ic_audiotrack" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/control_progress_line" android:background="@color/actionbar_overlay" android:paddingTop="4.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/exo_position" android:paddingLeft="4.0dp" android:paddingRight="4.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dp" android:includeFontPadding="false" />
        <View android:id="@id/exo_progress_placeholder" android:layout_width="0.0dp" android:layout_height="36.0dp" android:layout_weight="1.0" />
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/exo_duration" android:paddingLeft="4.0dp" android:paddingRight="4.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="14.0dp" android:includeFontPadding="false" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/control_buttons_line0" android:paddingTop="4.0dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/custom_unlock" android:layout_width="80.0dp" android:layout_height="60.0dp" android:contentDescription="@string/menu_unlock" app:srcCompat="@drawable/ic_unlock_circle" style="@style/ExoMediaButton" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/control_buttons_line1" android:background="@color/actionbar_overlay" android:paddingTop="4.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/custom_shuffle" android:contentDescription="@string/shuffle_title" app:srcCompat="@drawable/exo_controls_shuffle_on" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/exo_rew" android:contentDescription="@string/exo_controls_rewind_description" app:srcCompat="@drawable/ic_rewind_10" style="@style/ExoMediaButton" />
        <androidx.appcompat.widget.MySpinner android:id="@id/custom_speed" android:contentDescription="@string/playback_speed" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/exo_ffwd" android:contentDescription="@string/exo_controls_fastforward_description" app:srcCompat="@drawable/ic_forward_10" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/custom_repeat_toggle" style="@style/ExoMediaButton" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/control_buttons_line2" android:background="@color/actionbar_overlay" android:paddingTop="4.0dp" android:paddingBottom="4.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/custom_resize_mode" android:contentDescription="@string/screen_best_fit" app:srcCompat="@drawable/ic_resize_mode_best" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/custom_prev" style="@style/ExoMediaButton.Previous" />
        <ImageButton android:id="@id/exo_play" android:contentDescription="@string/exo_controls_play_description" app:srcCompat="@drawable/ic_play_arrow_44" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/exo_pause" android:contentDescription="@string/exo_controls_pause_description" app:srcCompat="@drawable/ic_pause_44" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/custom_next" style="@style/ExoMediaButton.Next" />
        <ImageButton android:id="@id/exo_vr" style="@style/ExoMediaButton.VR" />
        <ImageButton android:id="@id/custom_more" android:contentDescription="@string/menu_expand" app:srcCompat="@drawable/ic_expand_more_bottom" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/custom_less" android:contentDescription="@string/menu_collapse" app:srcCompat="@drawable/ic_expand_less_bottom" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/custom_rotation" android:contentDescription="@string/menu_rotate" app:srcCompat="@drawable/ic_screen_rotation" style="@style/ExoMediaButton" />
    </LinearLayout>
</LinearLayout>
