<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_ab_search" android:id="@id/menu_search" android:orderInCategory="100" android:title="@string/menu_search" app:actionLayout="@layout/view_search" app:showAsAction="ifRoom|collapseActionView" />
    <group android:id="@id/group_non_search">
        <item android:icon="@drawable/ic_ab_add_chart" android:id="@id/menu_permit_usage_access" android:visible="false" android:orderInCategory="120" android:title="@string/permit_usage_access" app:showAsAction="ifRoom" />
        <item android:icon="@drawable/ic_ab_view_settings" android:id="@id/menu_view_settings" android:orderInCategory="150" android:title="@string/menu_view_settings" app:showAsAction="ifRoom" />
    </group>
</menu>
