<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/debug" android:key="settings_debug" app:iconSpaceReserved="false">
        <ListPreference android:entries="@array/dev_settings_navigation_entries" android:title="@string/navigation_type" android:key="navigation_type" android:defaultValue="@string/dev_settings_navigation_default" android:dialogTitle="@string/navigation_type" android:entryValues="@array/dev_settings_navigation_values" app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <com.alphainventor.filemanager.user.BroadcastPreference android:title="STORAGE CHECK" app:iconSpaceReserved="false">
        <intent android:action="filemanager.intent.action.STORAGE_CHECK" />
    </com.alphainventor.filemanager.user.BroadcastPreference>
</PreferenceScreen>
