<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff212121" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/finish" android:background="@drawable/bg_transparent_dark_background" android:padding="12.0dp" android:layout_width="48.0dp" android:layout_height="48.0dp" android:tint="#ff888888" android:layout_alignParentLeft="true" android:contentDescription="@string/close_button_text" android:layout_alignParentStart="true" app:srcCompat="@drawable/ic_close" />
        <ImageButton android:id="@id/cancel" android:background="@drawable/bg_transparent_dark_background" android:padding="12.0dp" android:layout_width="48.0dp" android:layout_height="48.0dp" android:tint="#ff888888" android:layout_alignParentLeft="true" android:contentDescription="@string/abc_action_bar_home_description" android:layout_alignParentStart="true" app:srcCompat="@drawable/ic_home" />
    </RelativeLayout>
    <View android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0" />
    <TextView android:textSize="22.0sp" android:textColor="#ffd8d8d8" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/back_button_desc" android:layout_width="260.0dp" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginBottom="4.0dp" android:minHeight="72.0dp" android:text="@string/back_again_to_exit" />
    <TextView android:textSize="10.0sp" android:textColor="#ff000000" android:layout_gravity="center" android:background="#fffbb320" android:paddingLeft="2.0dp" android:paddingRight="2.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="6.0dp" android:text="@string/ad_mark" />
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_gravity="center" android:id="@id/ad_container" android:visibility="gone" android:layout_width="0.0dp" android:layout_height="0.0dp" android:layout_marginLeft="10.0dp" android:layout_marginRight="10.0dp" android:layout_weight="2.0" />
    <Button android:layout_gravity="center" android:id="@id/finish_bottom" android:layout_width="200.0dp" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="20.0dp" android:text="@string/menu_exit" style="@style/Widget.MaterialComponents.Button" />
    <TextView android:textSize="18.0sp" android:textColor="#ff888888" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="20.0dp" android:text="@string/app_name" />
</LinearLayout>
